--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ canonifyurls = true
   gravatarEmail = ""
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  picture = "/img/profile.jpg"
+  #picture = "/img/profile.jpg"
   # Your Twitter username without the @. E.g : thibaudlepretre
   twitter = "Securitybits_io"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
@@ -83,19 +83,13 @@ canonifyurls = true
   identifier = "github"
   name = "GitHub"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-github\"></i>"
-  url = "https://github.com/Securitybits-io"
+  url = "https://github.com/hacklab-no"
 [[menu.links]]
   weight = 2
   identifier = "twitter"
   name = "Twitter"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-twitter\"></i>"
-  url = "https://twitter.com/Securitybits_io"
-[[menu.links]]
-  weight = 3
-  identifier = "keybase.io"
-  name = "Keybase.io"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-code-fork\"></i>"
-  url = "https://keybase.io/securitybits"
+  url = "https://twitter.com/jabjorkhaug"
 
 [[menu.misc]]
   weight = 1
