--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ canonifyurls = true
   gravatarEmail = ""
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  #picture = "/img/profile.jpg"
+  picture = "/img/profile.jpg"
   # Your Twitter username without the @. E.g : thibaudlepretre
   twitter = "Securitybits_io"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
