--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ canonifyurls = true
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   picture = "/img/profile.jpg"
   # Your Twitter username without the @. E.g : thibaudlepretre
-  twitter = "Securitybits_io"
+  twitter = "jabjorkhaug"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
   # googlePlus = "+ThibaudLepretre"
 
